fix of the horizontal scroll in desktop

--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -35,7 +35,7 @@ hr {
   gap: 10px;
   height: auto;
   margin: 0 auto;
-  overflow:auto
+  overflow: auto;
 }
 
 .cards--all {
@@ -174,6 +174,13 @@ hr {
 
 /*DESKTOP*/
 @media (min-width: 992px) {
+  /*ESTA PARTE ES SI NO QUEREMOS SCROLL DEL BODY, IGUAL SE AGREGA, PRIENSO QUE NO,
+  YA QUE SOLO QUEREMOS EVITAR EL SCROLL EN EL BANNER DE CARDS
+  html,
+  body {
+    overflow-x: hidden;
+  }*/
+  
   .cards__container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
@@ -181,5 +188,12 @@ hr {
       "everlane1 casper everlane2"
       "harrys    casper everlane2";
     height: 85vh;
+    overflow: hidden;
+  }
+
+  .cards--all {
+    width: 100%;
+    height: 100%;
+    min-width: 0; 
   }
 }
